# lagrange-protobuf

./: Cargo.toml  buf.yaml  build.rs
.github/workflows/: ci.yml
proto/: lagrange.proto
proto/lagrange/: worker_task_erc20_query.proto  worker_task_preprocessing.proto  worker_task_rec_proof.proto  worker_task_storage_groth16.proto  worker_task_storage_preprocess.proto  worker_task_storage_query.proto  worker_task_tx_trie.proto  worker_task_v1_groth16.proto  worker_task_v1_query.proto
proto/lagrange/erc20_query/v1/: erc20_query.proto
proto/lagrange/experimental/: rec_proof.proto  tx_trie.proto
proto/lagrange/experimental/rec_proof/v1/: rec_proof.proto
proto/lagrange/experimental/tx_trie/v1/: tx_trie.proto
proto/lagrange/groth16/v1/: groth16.proto
proto/lagrange/groth16/v2/: groth16.proto
proto/lagrange/preprocessing/v1/: preprocessing.proto
proto/lagrange/preprocessing/v2/: preprocessing.proto
proto/lagrange/query/v1/: query.proto
proto/lagrange/query/v2/: query.proto
proto/lagrange/v0/: erc20_query.proto  groth16.proto  preprocessing.proto  query.proto
proto/lagrange/v1/: groth16.proto  preprocessing.proto  query.proto
src/: server.rs
