[package]
name = "lagrange-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"

# [[bin]]
# name = "client"
# path = "./src/client.rs"

[dependencies]
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
